Update BstationProvider clean version + plugin fix

--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,20 @@
+# Ignore IDE and editor files
 *.iml
-.gradle
-/local.properties
 /.idea
+/.vscode
 .DS_Store
+
+# Ignore build outputs
 /build
 **/build
 /captures
 .externalNativeBuild
 .cxx
-local.properties
-.vscode
-/ExampleProvider/
+
+# Ignore local configuration
+/local.properties
+
+# Jangan ignore folder ini, agar tetap ikut ke repo
+!/.gradle/
+!/.kotlin/
+!/.github/
