--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,59 +1,61 @@
-name: Build
-
-# https://docs.github.com/en/actions/learn-github-actions/workflow-syntax-for-github-actions#concurrency
-concurrency:
-  group: "build"
-  cancel-in-progress: true
+name: Build Cloudstream Extensions
 
 on:
   push:
     branches:
-      # choose your default branch
-      - master
       - main
-    paths-ignore:
-      - '*.md'
+      - master
+  workflow_dispatch:
+
+permissions:
+  contents: write
+
+concurrency:
+  group: "build"
+  cancel-in-progress: true
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
+    timeout-minutes: 15
     steps:
       - name: Checkout
-        uses: actions/checkout@v4.2.2
-        with:
-          path: "src"
-
-      - name: Checkout builds
-        uses: actions/checkout@v4.2.2
-        with:
-          ref: "builds"
-          path: "builds"
-
-      - name: Clean old builds
-        run: rm $GITHUB_WORKSPACE/builds/*.cs3 || true
+        uses: actions/checkout@v3
 
       - name: Setup JDK 17
-        uses: actions/setup-java@v4.6.0
+        uses: actions/setup-java@v3
         with:
-          distribution: "adopt"
-          java-version: 17
+          java-version: '17'
+          distribution: 'temurin'
+          cache: 'gradle'
 
-      - name: Setup Android SDK
-        uses: android-actions/setup-android@v3.2.2
+      - name: Grant execute permission for gradlew
+        run: chmod +x gradlew
 
-      - name: Build Plugins
+      - name: Build Extensions
+        run: ./gradlew make
+
+      - name: Prepare Artifacts for Deploy
         run: |
-          cd $GITHUB_WORKSPACE/src
-          chmod +x gradlew
-          ./gradlew make makePluginsJson
-          cp **/build/*.cs3 $GITHUB_WORKSPACE/builds
-          cp build/plugins.json $GITHUB_WORKSPACE/builds
+          mkdir -p deploy_git
+          
+          # 1. Copy .cs3 files from build outputs
+          find . -name "*.cs3" -exec cp {} deploy_git/ \;
+          
+          # 2. Run generator script inside the deploy folder
+          cp create_repo.py deploy_git/
+          cd deploy_git
+          python3 create_repo.py
+          rm create_repo.py # Clean up script
 
-      - name: Push builds
+      - name: Deploy to Builds Branch
         run: |
-          cd $GITHUB_WORKSPACE/builds
-          git config --local user.email "actions@github.com"
-          git config --local user.name "GitHub Actions"
+          cd deploy_git
+          git init
+          git config user.name "GitHub Actions"
+          git config user.email "actions@github.com"
+          git checkout -b builds
           git add .
-          git commit --amend -m "Build $GITHUB_SHA" || exit 0   # do not error if nothing to commit
-          git push --force
+          git commit -m "Deploy build artifacts"
+          git remote add origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git
+          git push origin builds --force
