git push origin mainfix workflow + provider

--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,13 @@
-# Ignore IDE and editor files
 *.iml
+.gradle
+/local.properties
 /.idea
-/.vscode
 .DS_Store
-
-# Ignore build outputs
 /build
 **/build
 /captures
 .externalNativeBuild
 .cxx
-
-# Ignore local configuration
-/local.properties
-
-# Jangan ignore folder ini, agar tetap ikut ke repo
-!/.gradle/
-!/.kotlin/
-!/.github/
+local.properties
+.vscode
+/ExampleProvider/
